injectable/tests/ui/multiple_constructors.stderr
error: #[injectable] requires exactly one #[injectable(ctor)] method, but found multiple
  --> tests/ui/multiple_constructors.rs:22:12
   |
22 |     pub fn from_name(name: String) -> Self {
   |            ^^^^^^^^^
